(lang dune 3.7)

(name cs3110)

(generate_opam_files true)

(source
 (github naosense/cs3110))

(authors "naosense")

(maintainers "naosense")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name cs3110)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
